--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,47 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
     environment:
       - QR_CODE_DIR=/app/qr_codes
       - FILL_COLOR=red
       - BACK_COLOR=white
+      - DATABASE_URL=postgresql://qruser:qrpassword@db:5432/qrdb
+      - FLASK_APP=run.py
+      - FLASK_ENV=development
+      - PYTHONPATH=/app
     volumes:
-      - ./qr_codes:/app/qr_codes  # Maps the local 'qr_codes' directory to '/app/qr_codes' in the container
+      - ./qr_codes:/app/qr_codes
       - ./logs:/app/logs
-    command: --url https://github.com/gsinghjay/  # Replace 'main.py' with your script's filename if different
+      - ./app:/app/app
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=qruser
+      - POSTGRES_PASSWORD=qrpassword
+      - POSTGRES_DB=qrdb
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_CONFIG_SERVER_MODE=False
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - db
+
+volumes:
+  postgres_data:
+  pgadmin_data:
