--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 venv
 images
+qr_codes/
 .python_history# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 # C extensions
 *.so
+
+
 
 # Distribution / packaging
 .Python
