--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,10 +48,4 @@ jobs:
           FLASK_ENV: testing
           TESTING: true
         run: |
-          pytest tests/ --cov=app --cov-report=xml -v
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./coverage.xml
-          fail_ci_if_error: true 
+          pytest tests/ -v
