--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@ pythonpath = .
 testpaths = tests
 python_files = test_*.py
 python_functions = test_*
-addopts = -v --cov=app --cov-report=term-missing
+addopts = -v --cov=app --cov-report=term-missing --cov-report=html:coverage_html --cov-report=xml:coverage.xml
