--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,11 @@ jobs:
           POSTGRES_DB: qrdb_test
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-retries 3
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - uses: actions/checkout@v4
@@ -26,13 +30,23 @@ jobs:
           cache: 'pip'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt pytest pytest-cov
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt pytest pytest-cov
+
+      - name: Initialize database
+        env:
+          DATABASE_URL: postgresql://qruser:qrpassword@localhost:5432/qrdb_test
+          FLASK_APP: manage.py
+        run: |
+          flask db upgrade
 
       - name: Run tests
         env:
           DATABASE_URL: postgresql://qruser:qrpassword@localhost:5432/qrdb_test
           QR_CODE_DIR: qr_codes
           FLASK_ENV: testing
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           mkdir -p qr_codes
           pytest tests/ -v
