--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,13 +32,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt pytest pytest-cov
+          pip install -r requirements.txt pytest
 
-      - name: Initialize database
+      - name: Initialize database and migrations
         env:
           DATABASE_URL: postgresql://qruser:qrpassword@localhost:5432/qrdb_test
           FLASK_APP: manage.py
         run: |
+          mkdir -p migrations
+          flask db init
+          flask db migrate -m "Initial migration"
           flask db upgrade
 
       - name: Run tests
